--- a/Classes/CSS/class4.css
+++ b/Classes/CSS/class4.css
@@ -1,6 +1,9 @@
 div p {
   color: red;
   font-size: 50px;
+  border: 5px solid black;
+  text-align: center;
+  padding: 20px 20px 20px 20px;
 }
 p {
   color: green;
